--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 /* The Basics============================== */
 
-  * {
-    box-sizing: border-box;
+* {
+  box-sizing: border-box;
 }
 
 .clearfix:after {
@@ -11,45 +11,26 @@
 }
 
 /* Home Page ======================== */
-
-header {
-  height: 100vh;
-  background-image: url('../images/image_placeholder_1.jpg');
-  background-repeat: no-repeat;
-  background-attachment: fixed;
-  color: white;
-  background-size: cover
+body {
+  font-family: courier;
+  font-weight: normal;
+  font-size: 9px;
+  letter-spacing: 2px;
+  text-decoration: none;
+  color: black;
 }
 
-.image {
-  height: 100vh;
-  background-repeat: no-repeat;
-  background-attachment: fixed;
-  text-align: center;
-  background-size: cover;
-}
-
-.second-image {
-  background-image: url('../images/image_placeholder_2.jpg');
-}
-
-.third-image {
-  background-image: url('../images/image_placeholder_1.jpg');
-}
-
-.fourth-image {
-  background-image: url('../images/image_placeholder_2.jpg');
-}
-
-.fifth-image {
-  background-image: url('../images/image_placeholder_1.jpg');
+img {
+/*  width: 95.22%;
+  margin-left: 60px;*/
+  width: 100%;
 }
 
 nav {
   width: 60px;
   height: 100%;
   background-color: #FFFFFF;
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   padding: 20px 0;
@@ -59,51 +40,57 @@ nav {
   border-left: none;
   border-top: none;
   border-bottom: none;
+  z-index: 90;
 }
 
 .scrolled {
   position: fixed;
 }
 
-h2 {
+nav a {
   transform: rotate(-90deg);
   white-space: nowrap;
-  font-family: courier;
-  font-weight: normal;
-  font-size: 9px;
   letter-spacing: 2.7px;
+  font-size: 9px;
   text-transform: uppercase;
   display: block;
   text-align: center;
   margin-top: 308px;
-
+  font-weight: normal;
+  color: black;
+  text-decoration: none;
 }
 
 
 
 /* View Options ======================== */
 
+section {
+  position: relative;
+}
 
-div a, p {
-  font-family: courier;
-  font-weight: normal;
-  font-size: 9px;
-  letter-spacing: 2px;
+.view {
   text-transform: uppercase;
   display: inline-block;
   color: white;
-  text-decoration: none;
   padding-top: 28px;
-  padding-left: 10px;
+  padding-left: 85%;
+  z-index: 100;
+  position: fixed;
+  top: 12px;
+}
+
+.view p {
+  display: inline-block;
 }
 
 .one, .four {
   display: inline-block;
-  color: white;
+
 }
 
-.one {
-  margin-left: 86%;
+.black {
+  color: black;
 }
 
 .fa-th-large {
@@ -129,29 +116,52 @@ div a, p {
 }
 
 .fourth-image-view {
-  background-image: url('../images/image_placeholder_1.jpg');
   float: left;
-  width: 65%;
+  width: 50%;
 }
 
 .fifth-image-view {
-  background-image: url('../images/image_placeholder_2.jpg');
   float: left;
-  width: 35%;
+  width: 50%;
 }
 
 /* More Information ======================== */
 
 .vertical ul {
   color: black;
-  margin-left: 300px;
-  line-height: 30px;
+  margin-left: 40px;
+  line-height: 20px;
   list-style: none;
-   font-family: courier;
-  font-weight: normal;
-  font-size: 9px;
-  letter-spacing: 2px;
-  margin-top: 30%;
+  margin-top: 21.5%;
+  float: left;
+  width: 10%;
+  text-align: right;
+  position: fixed;
+}
+
+article p {
+  text-transform: none;
+  color: black;
+  float: left;
+  width: 23%;
+  font-size: 8.5px;
+  text-align: justify;
+  margin-top: 19%;
+  margin-left: 170px;
+  line-height: 20px;
+  letter-spacing: .3px;
+  position: fixed;
+}
+
+.gallery {
+  float: left;
+  width: 50%;
+  transform: translateX(100%);
+}
+
+.photogrid {
+  float: left;
+  width: 50%;
 }
 
 /* Mobile Page ======================== */
