--- a/css/style.css
+++ b/css/style.css
@@ -30,8 +30,10 @@ html {
 body {
   font-family: courier;
   font-weight: normal;
-  font-size: 9px;
-  letter-spacing: 2px;
+   font-size: 8.5px;
+    line-height: 21px;
+  letter-spacing: .3px;
+  text-align: justify;
   text-decoration: none;
   color: black;
   margin: 0px;
@@ -67,6 +69,7 @@ nav a {
   margin-top: 308px;
   color: black;
   text-decoration: none;
+  font-size: 9px;
 }
 
 /* View Options ======================== */
@@ -106,31 +109,36 @@ nav a {
 
 /* More Information ======================== */
 
-.vertical ul {
+ul {
   color: black;
-  margin-left: .8%;
-  line-height: 20px;
   list-style: none;
-  margin-top: 27.6%;
-  float: left;
-  width: 10%;
+  margin-left: 80px;
   text-align: right;
   position: fixed;
+  line-height: 22px;
+  display: inline-block;
+}
+
+.vertical ul {
+  bottom: 0;
+  margin-bottom: 90px;
+}
+
+.firstVertical ul {
+  bottom: 0;
+  margin-bottom: 163px;
 }
 
 article p {
   text-transform: none;
   color: black;
   float: left;
-  width: 25%;
-  font-size: 8.5px;
-  text-align: justify;
-  margin-top: 27%;
-  padding-top: 25px;
-  padding-bottom: 10px;
-  margin-left: 12%;
-  line-height: 20px;
-  letter-spacing: .3px;
+  width: 300px;
+  bottom: 0;
+  margin-bottom: 83px;
+  padding-top: 27px;
+  padding-bottom: 7px;
+  margin-left: 140px;
   position: fixed;
   border-top: 1px dotted #454;
   border-bottom: 1px dotted #454;
@@ -138,13 +146,52 @@ article p {
 
 h3 {
   position: fixed;
-  margin-top: 28%;
-  margin-left: 12%;
+  bottom: 0;
+  margin-bottom: 135px;
+  margin-left: 140px;
   font-size: 6.5px;
   font-weight: 400;
   font-family: 'Oswald', sans-serif;
   text-transform: uppercase;
   letter-spacing: 1.5px;
+}
+
+section h3 {
+  bottom: 0;
+  margin-bottom: 185px;
+  border-top: 1px dotted #454;
+  padding-top: 7px;
+  width: 300px;
+  position: fixed;
+}
+
+.line {
+  border-right: 1px dotted #454;
+  height: 51px;
+  position: fixed;
+  bottom: 0;
+  margin-bottom: 160px;
+  margin-left: 310px;
+}
+
+.date h3 {
+  margin-left: 320px;
+  bottom: 0;
+  margin-bottom: 185px;
+}
+
+.date_2 p {
+  margin-left: 320px;
+  bottom: 0;
+  margin-bottom: 165px;
+  position: fixed;
+}
+
+section p {
+  bottom: 0;
+  margin-bottom: 165px;
+  margin-left: 140px;
+  position: fixed;
 }
 
 .gallery img {
@@ -153,72 +200,10 @@ h3 {
 
 .gallery img:hover {opacity: 0.7;}
 
-
-/* Hover ======================== */
-/* Note: Up and down are opposite */
-
-/*#up{
-  width:348px;
-  height:200px;  
-  margin-top: 533px;
-  position: fixed;
-  margin-left: 45%;
-  background-color: green;
-}
-
-#down{
-   width:348px;
-    height:200px;
-   margin-left: 45%;
-   position: fixed; 
-  z-index: 100;
-  background-color: green;
-}
-
-#gallery_container{
-  height:650px;
-  margin-left: 44.7%;
-  overflow-y:auto;   
-  overflow: hidden;
-  top: 0;
-  float: left;
-  width: 32.1%;
-}
-
-#gallery_container div{
-  width: 100%;   
-    float:left;
-}*/
-
-/*#up {
-  width:348px;
-  height:100px;  
-  margin-top: 533px;
-  position: fixed;
-  margin-left: 77%;
-  z-index: 100;
-  background: green;
-}
-
-#down {
-   width:348px;
-    height:100px;
-   margin-left: 77%;
-   position: fixed; 
-  z-index: 100;
-}
-*/
-
-/*.gallery {
-  float: left;
-  width: 50%;
-  margin-left: 25%;
-}*/
-
 .gallery_one {
   float: left;
-  width: 33.3%;
-  margin-left: 43%;
+  width: 32.5%;
+  margin-left: 43.8%;
 }
 
 .gallery_two {
@@ -228,19 +213,3 @@ h3 {
   margin-top: -144.5%;
   top: 0;
 }
-
-/*#gallery_container {
-  height:650px;
-  margin-left: 56.7%;
-  overflow-y:auto;   
-  overflow: hidden;
-  position: relative;
-/*  margin-top: -147.4%;*/
-/*  float: left;
-  width: 23.3%;*/
-/*}*/
- 
-/*#gallery_container div {
-    width: 100%;   
-    float:left;
-}*/
