--- a/css/style.css
+++ b/css/style.css
@@ -11,18 +11,18 @@
 }
 
 html {
-    height: 100%;
-    overflow: scroll;
-    overflow-x: hidden;
+  height: 100%;
+  overflow: scroll;
+  overflow-x: hidden;
 
 }
 ::-webkit-scrollbar {
-    width: 0px; 
-    background: transparent;
+  width: 0px; 
+  background: transparent;
 }
 
 ::-webkit-scrollbar-thumb {
-    background: black;
+  background: black;
 }
 
 /* Home Page ======================== */
@@ -30,46 +30,119 @@ html {
 body {
   font-family: courier;
   font-weight: normal;
-   font-size: 8.5px;
-    line-height: 21px;
+  font-size: 8.6px;
   letter-spacing: .3px;
   text-align: justify;
   text-decoration: none;
   color: black;
   margin: 0px;
+  line-height: 20px;
 }
 
 img {
   width: 100%;
 }
 
-nav {
-  width: 60px;
+/* Sidebar ======================== */
+
+.title {
   height: 100%;
-  background-color: #FFFFFF;
   position: fixed;
   top: 0;
-  left: 0;
-  padding: 20px 0;
-  border-style: solid;
-  border-color: #D8D8D8;
-  border-width: 1px;
-  border-left: none;
-  border-top: none;
-  border-bottom: none;
-  z-index: 90;
+  border-right: 1px solid #D8D8D8;
+  float: left;
+  width: 10%;
+  margin-left: 90%;
 }
 
-nav a {
+.title a {
   transform: rotate(-90deg);
   white-space: nowrap;
   letter-spacing: 2.7px;
-  text-transform: uppercase;
+  margin-top: 328px;
+  margin-left: 60px;
+  font-size: 9px;
   display: block;
-  margin-top: 308px;
+  text-transform: uppercase;
+}
+
+nav {
+  width: 100%;
+  height: 100%;
+  position: fixed;
+}
+
+.sidebar ul {
+  bottom: 77px;
+  margin-left: 140px;
+  position: fixed;
+}
+
+.sidebar a {
   color: black;
   text-decoration: none;
-  font-size: 9px;
+}
+
+.sidebar li {
+  border-top: 1px dotted #454;
+  list-style: none;
+  width: 300px;
+  height: 51px;
+  transition: all 300ms ease-in-out;
+}
+
+.sidebar li:last-child {
+  border: none;
+  display: inline-block;
+}
+
+/*.numbers {
+  margin-left: 160px;
+  bottom: 89px;
+  position: fixed;
+  line-height: 42px;
+  display: block;
+}*/
+
+.close {
+  left: 200px;
+  text-transform: none;
+  cursor: pointer;
+  color: black;
+  font-size: 15px;
+}
+
+.sidebar {
+  transition: all .5s ease-in-out;
+  transform: translateX(-95%);
+  background-color: white;
+  z-index: 100;
+}
+
+.active {
+  transform: translateX(0%);
+  transition: all .5s ease-in-out;
+}
+
+.sidebar li:hover {
+  transform: translateX(3%);
+}
+
+.sidebar li:last-child:hover {
+   transform: translateX(0%);
+}
+
+.sidebar a:active {
+   font-weight: italic;
+}
+
+.currentLink {
+   font-style: italic;
+}
+
+.button {
+  padding-bottom: 35px;
+  padding-right: 220px;
 }
 
 /* View Options ======================== */
@@ -80,6 +153,8 @@ nav a {
   right: 50px;
   font-size: 9px;
   color: white;
+  letter-spacing: 2px;
+  display: none;
 }
 
 #views span {
@@ -109,46 +184,19 @@ nav a {
 
 /* More Information ======================== */
 
-ul {
-  color: black;
+/*.general ul {
   list-style: none;
   margin-left: 80px;
-  text-align: right;
   position: fixed;
-  line-height: 22px;
   display: inline-block;
-}
-
-#vertical ul {
-  bottom: 0;
-  margin-bottom: 93px;
+  bottom: 78px;
 }
 
 #firstVertical ul {
-  bottom: 0;
-  margin-bottom: 166px;
-}
-
-article p {
-  text-transform: none;
-  color: black;
-  float: left;
-  width: 300px;
-  bottom: 0;
-  margin-bottom: 86px;
-  padding-top: 27px;
-  padding-bottom: 7px;
-  margin-left: 140px;
-  position: fixed;
-  border-top: 1px dotted #454;
-  border-bottom: 1px dotted #454;
-}
+  bottom: 152px;
+}*/
 
 h3 {
-  position: fixed;
-  bottom: 0;
-  margin-bottom: 138px;
-  margin-left: 140px;
   font-size: 6.5px;
   font-weight: 400;
   font-family: 'Oswald', sans-serif;
@@ -156,70 +204,106 @@ h3 {
   letter-spacing: 1.5px;
 }
 
-section h3 {
-  bottom: 0;
-  margin-bottom: 188px;
-  border-top: 1px dotted #454;
-  padding-top: 7px;
-  width: 300px;
+article {
   position: fixed;
+  bottom: 77px;
+  border-top: 1px dotted #454;
+  border-bottom: 1px dotted #454;
+  float: left;
+  margin-left: 140px;
 }
 
-.line {
+article p {
+  width: 300px;
+}
+
+article h3 {
+  margin-bottom: -7px;
+}
+
+#line {
   border-right: 1px dotted #454;
   height: 51px;
   position: fixed;
-  bottom: 0;
-  margin-bottom: 163px;
+  bottom: 154px;
   margin-left: 310px;
 }
 
-#date h3 {
-  margin-left: 320px;
-  bottom: 0;
-  margin-bottom: 188px;
-}
-
-#date_2 p {
-  margin-left: 320px;
-  bottom: 0;
-  margin-bottom: 168px;
-  position: fixed;
-}
-
-section p {
-  bottom: 0;
-  margin-bottom: 168px;
+.type {
   margin-left: 140px;
   position: fixed;
+  bottom: 152px;
+  border-top: 1px dotted #454;
+  width: 300px;
 }
 
-.gallery img {
+.type h3 {
+  margin-bottom: -9px;
+}
+
+.date {
+  margin-left: 325px;
+  position: fixed;
+  bottom: 152px;
+  display: block;
+  padding-right: 110px;
+}
+
+.date h3 {
+  margin-bottom: -9px;
+}
+
+/* Gallery ======================== */
+
+#gallery img {
   padding-bottom: 2px;
 }
 
-.gallery img:hover {opacity: 0.7;}
+#gallery img:hover {opacity: 0.7;}
 
-#gallery_one {
+.gallery_one {
   float: left;
   width: 32.5%;
   margin-left: 43.8%;
 }
 
-#gallery_two {
+.gallery_two {
   float: left;
   width: 23.5%;
   margin-left: 76.5%;
   margin-top: -162.8%;
 }
 
+/* Gallery (Visual Design) ======================== */
+
+.vis {
+  float: left;
+  width: 56.2%;
+  margin-left: 43.8%;
+}
+
+/* Snap Back ======================== */
+
 .scrollUp {
   position: fixed;
-  color: #454;
   margin-left: 40.4%;
   bottom: 0;
   margin-bottom: 25px;
   cursor: pointer;
   font-size: 15px;
+  display: none;
 }
+
+.HomeScrollUp {
+  margin-left: 7.7%;
+  position: fixed;
+  bottom: 0;
+  margin-bottom: 25px;
+  cursor: pointer;
+  font-size: 15px;
+  display: none;
+}
+
+/* Collage ======================== */
+
 
