--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,7 @@
 
 * {
   box-sizing: border-box;
+/*  border: 1px solid black;*/
 }
 
 .clearfix:after {
@@ -32,15 +33,22 @@ body {
   font-weight: normal;
   font-size: 8.6px;
   letter-spacing: .3px;
-  text-align: justify;
   text-decoration: none;
   color: black;
-  margin: 0px;
-  line-height: 20px;
+  line-height: 18px;
 }
 
 img {
   width: 100%;
+}
+
+#header {
+  background: url('../images/image_placeholder_1.jpg') no-repeat center center fixed;
+  background-size: cover;
+  margin: 0 auto;
+  position: relative;
+  max-width: 1800px;
+  height: 100vh;
 }
 
 /* Sidebar ======================== */
@@ -48,11 +56,13 @@ img {
 .title {
   height: 100%;
   position: fixed;
-  top: 0;
   border-right: 1px solid #D8D8D8;
-  float: left;
-  width: 10%;
-  margin-left: 90%;
+  /*  float: left;*/
+  width: 62px;
+  right: 0;
+  background-color: black;
+  overflow:hidden;
+  /*  margin-left: 90%;*/
 }
 
 .title a {
@@ -60,14 +70,16 @@ img {
   white-space: nowrap;
   letter-spacing: 2.7px;
   margin-top: 328px;
+  right: 10px;
   margin-left: 60px;
   font-size: 9px;
   display: block;
   text-transform: uppercase;
+
 }
 
 nav {
-  width: 100%;
+  width: 140px;
   height: 100%;
   position: fixed;
 }
@@ -96,14 +108,6 @@ nav {
   display: inline-block;
 }
 
-/*.numbers {
-  margin-left: 160px;
-  bottom: 89px;
-  position: fixed;
-  line-height: 42px;
-  display: block;
-}*/
-
 .close {
   left: 200px;
   text-transform: none;
@@ -129,15 +133,15 @@ nav {
 }
 
 .sidebar li:last-child:hover {
-   transform: translateX(0%);
+ transform: translateX(0%);
 }
 
 .sidebar a:active {
-   font-weight: italic;
+ font-weight: italic;
 }
 
 .currentLink {
-   font-style: italic;
+ font-style: italic;
 }
 
 .button {
@@ -184,17 +188,16 @@ nav {
 
 /* More Information ======================== */
 
-/*.general ul {
-  list-style: none;
-  margin-left: 80px;
+article {
+  margin-left: 140px;
   position: fixed;
-  display: inline-block;
-  bottom: 78px;
+  width: 300px;
+  bottom: 80px;
+  line-height: 20px;
+  background-color: white;
+    border-top: 1px dotted #454;
+  border-bottom: 1px dotted #454;
 }
-
-#firstVertical ul {
-  bottom: 152px;
-}*/
 
 h3 {
   font-size: 6.5px;
@@ -202,84 +205,63 @@ h3 {
   font-family: 'Oswald', sans-serif;
   text-transform: uppercase;
   letter-spacing: 1.5px;
-}
-
-article {
-  position: fixed;
-  bottom: 77px;
-  border-top: 1px dotted #454;
-  border-bottom: 1px dotted #454;
-  float: left;
-  margin-left: 140px;
-}
-
-article p {
-  width: 300px;
-}
-
-article h3 {
-  margin-bottom: -7px;
-}
-
-#line {
-  border-right: 1px dotted #454;
-  height: 51px;
-  position: fixed;
-  bottom: 154px;
-  margin-left: 310px;
-}
-
-.type {
-  margin-left: 140px;
-  position: fixed;
-  bottom: 152px;
-  border-top: 1px dotted #454;
-  width: 300px;
-}
-
-.type h3 {
   margin-bottom: -9px;
+}
+
+article div {
+  display: inline-block;
+}
+
+article div:first-of-type {
+  padding-right: 105px;
+}
+
+.description{
+  width: 300px;
+  border-top: 1px dotted #454;
+}
+
+article .type {
+  border-right: 1px dotted #454;
 }
 
 .date {
-  margin-left: 325px;
-  position: fixed;
-  bottom: 152px;
-  display: block;
-  padding-right: 110px;
+  padding-left: 10px;
 }
 
-.date h3 {
-  margin-bottom: -9px;
-}
 
 /* Gallery ======================== */
 
-#gallery img {
-  padding-bottom: 2px;
+    .gallery_one {
+    float: right;
+    width: 32.5%;
+    padding-right: 2px;
+  }
+
+  .gallery_one img {
+    padding-bottom: 2px;
+  }
+
+    .gallery_one img:hover {opacity: 0.7;}
+
+
+  .gallery_two {
+    float: right;
+    width: 23.6%;
 }
 
-#gallery img:hover {opacity: 0.7;}
+  .gallery_two img {
+    padding-bottom: 2px;
+  }
 
-.gallery_one {
-  float: left;
-  width: 32.5%;
-  margin-left: 43.8%;
-}
-
-.gallery_two {
-  float: left;
-  width: 23.5%;
-  margin-left: 76.5%;
-  margin-top: -162.8%;
-}
+  .gallery_two img:hover {opacity: 0.7;}
 
 /* Gallery (Visual Design) ======================== */
 
 .vis {
   float: left;
   width: 56.2%;
-  margin-left: 43.8%;
+  margin-left: 558px;
 }
 
 /* Snap Back ======================== */
@@ -305,5 +287,4 @@ article h3 {
 }
 
 /* Collage ======================== */
-
 
