--- a/css/style.css
+++ b/css/style.css
@@ -31,11 +31,11 @@ html {
 body {
   font-family: courier;
   font-weight: normal;
-  font-size: 8.6px;
+  font-size: 9.4px;
   letter-spacing: .3px;
   text-decoration: none;
   color: black;
-  line-height: 18px;
+  line-height: 21px;
 }
 
 img {
@@ -81,7 +81,7 @@ nav {
 }
 
 .sidebar ul {
-  bottom: 77px;
+  bottom: 75px;
   margin-left: 110px;
   position: fixed;
 }
@@ -94,7 +94,7 @@ nav {
 .sidebar li {
   border-top: 1px dotted #454;
   list-style: none;
-  width: 300px;
+  width: 320px;
   height: 51px;
   transition: all 300ms ease-in-out;
 }
@@ -154,7 +154,7 @@ nav {
   position: fixed;
   top: 40px;
   right: 50px;
-  font-size: 9px;
+  font-size: 9.5px;
   color: white;
   letter-spacing: 2px;
   display: none;
@@ -179,7 +179,6 @@ nav {
 .gridTile {
   width: 50%;
   float: left;
-
 }
 
 .black {
@@ -189,24 +188,23 @@ nav {
 /* More Information ======================== */
 
 article {
-  margin-left: 140px;
+  margin-left: 145px;
   position: fixed;
-  width: 300px;
-  bottom: 80px;
+  width: 320px;
+  bottom: 75px;
   /*  top: 430px;*/
-  line-height: 20px;
   border-top: 1px dotted #454;
   border-bottom: 1px dotted #454;
   float: left;
 }
 
 h3 {
-  font-size: 6.5px;
+  font-size: 7.4px;
   font-weight: 400;
   font-family: 'Oswald', sans-serif;
   text-transform: uppercase;
   letter-spacing: 1.5px;
-  margin-bottom: -10px;
+  margin-bottom: -8px;
 }
 
 article div {
@@ -218,7 +216,7 @@ article div:first-of-type {
 }
 
 .description{
-  width: 300px;
+  width: 320px;
   border-top: 1px dotted #454;
 }
 
@@ -235,7 +233,7 @@ article .type {
 }
 
 .date h3 {
-  padding-bottom: 9px;
+  padding-bottom: 10px;
 }
 
 .dateEdit {
@@ -256,7 +254,7 @@ article .type {
 
 .gallery_one {
   float: right;
-  width: 34%;
+  width: 32%;
   padding-right: 2px;
   padding-left: 30px;
 }
@@ -270,7 +268,37 @@ article .type {
 
 .gallery_two {
   float: right;
-  width: 24%;
+  width: 22%;
+}
+
+
+.viewThreeMid {
+  float: right;
+  width: 18%;
+}
+
+.viewThreeLarge {
+  float: right;
+  width: 21%;
+}
+
+/*.gallery_three {
+  padding-right: 2px;
+  float: right;
+}*/
+
+.viewThree {
+  float: right;
+  width: 15%;
+  padding-right: 2px;
+}
+
+.hide {
+  display: none;
+}
+
+.gallery_three img {
+  padding-bottom: 2px;
 }
 
 .gallery_two img {
@@ -279,16 +307,21 @@ article .type {
 
 .gallery_two img:hover {opacity: 0.7;}
 
+.gallery_three img:hover {opacity: 0.7;}
+
 /* Gallery (Visual Design) ======================== */
 
 .vis {
   float: right;
-  width: 58%;
-  padding-left: 30px;
+  width: 51.5%;
+
 }
 
 .vis img {
-  padding-bottom: 2px;
+  margin-bottom: 2px;
+  border-bottom: 1px solid #f5f5f5;;
+  border-left: 1px solid #f5f5f5;
+  border-top: 1px solid #f5f5f5;
 }
 
 /* Snap Back ======================== */
@@ -316,70 +349,4 @@ article .type {
 /* Collage ======================== */
 .grey {
   color: #aeaeae;
-}
-
-.collage {
-  transition: all .5s ease-in-out;
-  float: none;
-  position: relative;
-}
-
-.dollClass {
-   transform:translate(64%,0%);
-   width: 60%;
-}
-
-.kevinClass {
-   transform: translate(-324%, -95%);
-   width: 53%;
-}
-
-.legsClass {
-    width: 45%;
-    transform: translate(-38%, 130%);
-}
-
-.twoLegsClass {
-  width: 80%;
- transform: translate(65%, 5%);
-}
-
-.blueBuildingClass {
-     width: 53%;
-    transform: translate(40%, 8%);
-}
-
-.rebeccaClass {
-    width: 60%;
-    transform: translate(-60%, -100%);
-}
-
-.portraitClass {
-    width: 70%;
-    transform: translate(10%, -271%);
-}
-
-.rebeccaVerticalClass {
-    width: 85%;
-    transform: translate(90%, 80%);
-}
-
-.pinkClass {
-      width: 51%;
-        transform: translate(244%, -481%);
-}
-
-.treeClass {
-   width: 65%;
-    transform: translate(28%, -274%);
-}
-
-.buildingsClass {
-       width: 51%;
-    transform: translate(240%, -147%);
-}
-
-.legsClass {
-      width: 40%;
-    transform: translate(-30%, 135%);
 }
