--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@
 
 * {
   box-sizing: border-box;
-  /*  border: 1px solid black;*/
+/*    border: 1px solid black;*/
 }
 
 .clearfix:after {
@@ -29,9 +29,9 @@ html {
 /* Home Page ======================== */
 
 body {
-  font-family: courier;
+  font-family: Cutive Mono;
   font-weight: normal;
-  font-size: 9.6px;
+  font-size: 11.5px;
   letter-spacing: .3px;
   text-decoration: none;
   color: black;
@@ -46,8 +46,6 @@ img {
   background: url('../images/homeHeader.jpg') no-repeat center center fixed;
   background-size: cover;
   margin: 0 auto;
-  position: relative;
-  max-width: 1800px;
   height: 100vh;
 }
 
@@ -64,28 +62,31 @@ img {
 .title a {
   white-space: nowrap;
   letter-spacing: 2.7px;
-  margin-bottom: 50%;
+/*  margin-bottom: 50%;*/
   font-size: 9.5px;
   display: block;
   text-transform: uppercase;
-  position: absolute;
+  position: relative;
   top: 50%; 
-  right: -15px;
+/*  right: -15px;*/
   transform: rotate(-90deg);
 }
 
 nav {
-  width: 1273px;
+/*  width: 100%;*/
+width: 1300px;
   height: 100%;
   position: fixed;
   z-index: 100;
-    cursor: pointer;
+  cursor: pointer;
+  top: 0;
 }
 
 .sidebar ul {
-  bottom: 75px;
-  margin-left: 110px;
+  bottom: 15%;
+  margin-left: 12%;
   position: fixed;
+    width: 29%;
 }
 
 .sidebar a {
@@ -96,8 +97,6 @@ nav {
 .sidebar li {
   border-top: 1px dotted #454;
   list-style: none;
-  width: 320px;
-  height: 51px;
   transition: all 300ms ease-in-out;
 }
 
@@ -107,7 +106,7 @@ nav {
 }
 
 .close {
-  left: 200px;
+  margin-left: 12%;
   text-transform: none;
   cursor: pointer;
   color: black;
@@ -116,7 +115,7 @@ nav {
 
 .sidebar {
   transition: all .5s ease-in-out;
-  transform: translateX(-95%);
+  transform: translateX(-95.3%);
   background-image: url('../images/two.jpg');
   background-repeat: no-repeat;
   background-position: right top;
@@ -125,7 +124,7 @@ nav {
 }
 
 .active {
-  transform: translateX(0%);
+  transform: translateX(-2.2%);
   transition: all .5s ease-in-out;
 }
 
@@ -146,13 +145,14 @@ nav {
 }
 
 .button {
-  padding-bottom: 35px;
   padding-right: 220px;
+  padding-bottom: 30px;
+  display: block;
 }
 
 /* View Options ======================== */
 
-#views {
+/*#views {
   position: fixed;
   top: 40px;
   right: 50px;
@@ -185,84 +185,74 @@ nav {
 
 .black {
   color: black;
-}
+}*/
 
 /* More Information ======================== */
 
 article {
-  margin-left: 145px;
+  margin-left: 11%;
   position: fixed;
-  width: 320px;
-  bottom: 75px;
-  /*  top: 430px;*/
+  width: 29%;
+  bottom: 12%;
   border-top: 1px dotted #454;
   border-bottom: 1px dotted #454;
-  float: left;
 }
 
 h3 {
-  font-size: 7.5px;
+  font-size: 8px;
   font-weight: 400;
   font-family: 'Oswald', sans-serif;
   text-transform: uppercase;
-  letter-spacing: 1.5px;
-  margin-bottom: -8px;
-}
-
-article div {
-  display: inline-block;
+  letter-spacing: 1.8px;
 }
 
 article div:first-of-type {
-  padding-right: 105px;
+  padding-right: 32%;
+  padding-bottom: 1px;
 }
 
-.description{
-  width: 320px;
+
+.description {
+  width: 100%;
+  float: left;
+  border-top: 1px dotted #454;
+     
 }
 
-.description h3 {
-  margin-bottom: -6px;
+.description p {
+  margin-top: -1%;
 }
 
-article .type {
-  border-right: 1px dotted #454;
-  border-bottom: 1px dotted #454;
-}
-
-.date {
-  padding-left: 15px;
-  border-bottom: 1px dotted #454;
-  padding-bottom: 9px;
-  padding-right: 93px;
-  margin-left: -5px;
+.type {
+    float: left;
+    width: 60%;
 }
 
 .date h3 {
-  padding-bottom: 10px;
+  margin-bottom: 1.6%;
 }
 
-.dateEdit {
-  padding-left: 15px;
+.date {
+  padding-left: 4%;
+  border-left: 1px dotted #454;
+   float: left;
+   width: 40%;
+   padding-bottom: 3.1%;
 }
 
-.dateEdit h3 {
-  padding-bottom: 9px;
+.type h3 {
+  margin-bottom: -8%;
 }
 
-#slashEdit {
-  padding-left: 5px;
-  padding-right: 2px;
-}
 
 
 /* Gallery ======================== */
 
 .gallery_one {
   float: right;
-  width: 32%;
+  width: 30%;
   padding-right: 2px;
-  padding-left: 30px;
+/*  padding-left: 30px;*/
 }
 
 .gallery_one img {
@@ -285,7 +275,7 @@ article .type {
 
 .viewThreeLarge {
   float: right;
-  width: 21%;
+  width: 19%;
 }
 
 /*.gallery_three {
@@ -319,12 +309,12 @@ article .type {
 
 .vis {
   float: right;
-  width: 51.5%;
+  width: 52%;
 
 }
 
 .vis img {
-  margin-bottom: 2px;
+  padding-bottom: 2px;
   border-bottom: 1px solid #f5f5f5;;
   border-left: 1px solid #f5f5f5;
   border-top: 1px solid #f5f5f5;
@@ -334,15 +324,15 @@ article .type {
 
 .scrollUp {
   position: fixed;
-  margin-left: 40.4%;
+  margin-left: 43.5%;
   bottom: 0;
-  margin-bottom: 25px;
+  margin-bottom: 2%;
   cursor: pointer;
   font-size: 15px;
   display: none;
 }
 
-.HomeScrollUp {
+/*.HomeScrollUp {
   margin-left: 8.5%;
   position: fixed;
   bottom: 0;
@@ -350,7 +340,7 @@ article .type {
   cursor: pointer;
   font-size: 15px;
   display: none;
-}
+}*/
 
 /* Collage ======================== */
 .grey {
